[gd_scene load_steps=11 format=2]

[ext_resource path="res://Resources/Images/Mobile RPG Mockup.png" type="Texture" id=1]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Resources/Images/Dungeon.png" type="Texture" id=3]
[ext_resource path="res://Battle.gd" type="Script" id=4]
[ext_resource path="res://PlayerStats.gd" type="Script" id=5]
[ext_resource path="res://StatsPanel.gd" type="Script" id=6]
[ext_resource path="res://DefaultTheme.tres" type="Theme" id=7]
[ext_resource path="res://Resources/SwordActionButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://Resources/HealActionButton.tscn" type="PackedScene" id=9]
[ext_resource path="res://Resources/HealActionButton.gd" type="Script" id=10]

[node name="Battle" type="Node"]
script = ExtResource( 4 )

[node name="PlayerStats" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Dungeon" type="Sprite" parent="."]
position = Vector2( 45, 80 )
texture = ExtResource( 3 )

[node name="MobileRpgMockup" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.0862745 )
position = Vector2( 45, 80 )
texture = ExtResource( 1 )

[node name="Enemy" parent="." instance=ExtResource( 2 )]
position = Vector2( 42.439, 30.344 )

[node name="HPLabel" parent="Enemy" index="1"]
anchor_right = 1.0
margin_left = -19.0
margin_top = -24.145
margin_right = 21.0
margin_bottom = -10.145

[node name="UI" type="Control" parent="."]
margin_right = 90.0
margin_bottom = 160.0
theme = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="StatsPanel" type="Panel" parent="UI"]
margin_left = 5.0
margin_top = 50.0
margin_right = 86.0
margin_bottom = 73.0
script = ExtResource( 6 )

[node name="StatsContainer" type="HBoxContainer" parent="UI/StatsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HP" type="Label" parent="UI/StatsPanel/StatsContainer"]
margin_top = 6.0
margin_right = 24.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "HP
25"
align = 1

[node name="AP" type="Label" parent="UI/StatsPanel/StatsContainer"]
margin_left = 28.0
margin_top = 6.0
margin_right = 52.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "AP
3"
align = 1

[node name="MP" type="Label" parent="UI/StatsPanel/StatsContainer"]
margin_left = 56.0
margin_top = 6.0
margin_right = 81.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "MP
10"
align = 1

[node name="TextboxPanel" type="Panel" parent="UI"]
margin_left = -2.0
margin_top = 138.0
margin_right = 92.0
margin_bottom = 163.0

[node name="BattleActionButtons" type="GridContainer" parent="UI"]
anchor_left = 0.046
anchor_right = 0.193
margin_left = 4.86
margin_top = 76.0
margin_right = 63.63
margin_bottom = 131.0
custom_constants/vseparation = 2
custom_constants/hseparation = 8
columns = 2

[node name="SwordActionButton" parent="UI/BattleActionButtons" instance=ExtResource( 8 )]

[node name="HealActionButton" parent="UI/BattleActionButtons" instance=ExtResource( 9 )]
anchor_bottom = 0.0
margin_left = 40.0
margin_right = 72.0
margin_bottom = 13.0
script = ExtResource( 10 )

[connection signal="ap_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_ap_changed"]
[connection signal="hp_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_hp_changed"]
[connection signal="mp_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_mp_changed"]
[connection signal="died" from="Enemy" to="." method="_on_Enemy_died"]

[editable path="Enemy"]
